compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__guards__clause_guards_7.snap
---
source: compiler-core/src/erlang/tests/guards.rs
expression: "\npub fn main() {\n  case 1.0, 0.1 {\n    x, y if x >. y -> 1\n    _, _ -> 0\n  }\n}\n"
---
----- SOURCE CODE

pub fn main() {
  case 1.0, 0.1 {
    x, y if x >. y -> 1
    _, _ -> 0
  }
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([main/0]).

-file("project/test/my/mod.gleam", 2).
-spec main() -> integer().
main() ->
    case {1.0, 0.1} of
    {X, Y} when X > Y ->
        1;

    {_, _} ->
        0
end.
